# model-context-protocol-mcp-hands-on-with-agentic-ai-2034200

./: NOTICE  README.md
.devcontainer/: devcontainer.json
gh-models-helper/: .env.template  gh_models.py  main.py  package-lock.json  pyproject.toml
mcp-server-examples/gh-models-comparison/: README.md  package-lock.json  package.json
mcp-server-examples/gh-models-comparison/src/: index.ts
mcp-server-examples/gh-models-comparison/src/api/: github-models.ts
mcp-server-examples/gh-models-comparison/src/models/: resources.ts  tools.ts
mcp-server-examples/gh-models-comparison/src/prompts/: model-comparison.ts
mcp-server-examples/gh-models-comparison/src/types/: index.ts
mcp-server-examples/projectDocumenter/: README.md  package-lock.json  test-server.sh
mcp-server-examples/text-assist/: README.md  server.py
project-documenter/: package.json
project-documenter/src/: index.ts
templates/mcp-server-python-template/: README.md
templates/mcp-server-typescript-template/: package.json
templates/mcp-server-typescript-template/src/: index.ts
text-assist/: README.md  pyproject.toml
