[project]
name = "gh-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.32.0",
    "mcp[cli]>=1.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv]

